# generic-global-variables

./: Cargo.toml  README.md
src/: lib.rs
