[package]
name = "generic-global-variables"
version = "0.1.1"
edition = "2021"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "Provides tools for implement generic global variables."
repository = "https://github.com/NobodyXu/generic-global-variables"

keywords = ["utilities"]
categories = []

[dependencies]
parking_lot = "0.12"

[dev-dependencies]
once_cell = "1.8.0"
